<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:contentDescription="bmi"
        android:src="@drawable/bmi" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/txt_enter_txt"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_weight"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:autofillHints=""
        android:background="@color/yel_enter"
        android:gravity="center"
        android:hint="@string/edt_inp"
        android:inputType="number"
        android:textColorHint="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/txt_enter_txt2"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_height"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:autofillHints=""
        android:background="@color/yel_enter"
        android:gravity="center"
        android:hint="@string/edt_inp2"
        android:inputType="number"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/btn_cal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:backgroundTint="@color/btn1_cal"
        android:text="@string/btn_cal" />

    <Button
        android:id="@+id/btn_res"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:backgroundTint="@color/btn1_cal"
        android:text="@string/btn_cal2" />

    <TextView
        android:id="@+id/tv_res"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:background="#171613"
        android:gravity="center"
        android:textSize="20sp" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:text="created by : erfan shirvani"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_gravity="center"/>
</LinearLayout>


